<resources>
    <string name="app_name">Getting Active</string>
    <string name="title_current_tasks">Поточні завдання</string>
    <string name="title_dashboard">Мої завдання</string>
    <string name="title_notifications">Профіль</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_out">Вийти</string>
    <string name="task_description_default">Task description</string>
    <string name="task_title_default">Task title</string>
    <string name="task_tip_default">Task tip</string>
    <string name="tip_icon">Tip icon</string>
    <string name="task_tags_default">#hashtag #hashtag #hashtag</string>
    <string name="anonymous_profile">anonymous profile picture</string>
    <string name="progress_string">Ви виконали %1$d завдань. Продовжуйте в тому ж дусі!</string>
    <string name="task_viewholder_button_text">Я в ділі!</string>
    <string name="progress_string_no_tasks">Ви ще не виконали завдань жодного завдання.</string>
    <string name="select_pref_text">Виберіть ваші цілі:</string>
    <string name="archive_tasks_label">Архів завдань</string>
    <string name="task_complete">Виконано!</string>
    <string name="task_accepted">Я в ділі!</string>
    <string name="title_activity_archive">ArchiveActivity</string>
    <string name="level">Ваш рівень: %1$d.</string>
    <string name="level_tip">Виконуйте завдання, щоб виростити величезне дерево!</string>
    <string name="level_tip0">Поки що Ви не виконали жодного завдання. Виконайте хоча б одне для того, щоб побачити Ваше дерево.</string>
    <string name="level_tip5">Вітаємо! Ви успішно завершили достатньо завдань, щоб виростити кремезне дерево!</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="apply_button_text">Продовжити</string>
    <string name="preferences_button_text">Змінити цілі</string>
    <string name="navigation_tree">Дерево</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tree_title">Моє дерево</string>
    <string name="tree_description">Ваше дерево прогресу.</string>
    <string name="tree_text_default">Ваше дерево прогресу.</string>
</resources>