<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--        android:paddingBottom="@dimen/tasks_list_margin"-->

    <TextView
        android:id="@+id/task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/task_title_default"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_title"
        android:layout_marginTop="@dimen/tasks_list_margin"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/task_description_default"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/task_title" />

    <ImageView
        android:id="@+id/tip_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/holder_subtext_margin"
        android:contentDescription="@string/tip_icon"
        android:src="@drawable/bottle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_description" />

    <TextView
        android:id="@+id/tip_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/task_tip_default"
        app:layout_constraintBottom_toTopOf="@id/tags_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tip_icon"
        app:layout_constraintTop_toBottomOf="@id/task_description"

        />

    <TextView
        android:id="@+id/tags_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/holder_subtext_margin"
        android:gravity="center_vertical"
        android:text="@string/task_tags_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_icon" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_viewholer_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tip_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/task_title"
        app:layout_constraintVertical_bias="0.791" />

</androidx.constraintlayout.widget.ConstraintLayout>